Code refactoring and solved the width problem of the sidebar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     />
 
     <!--      Own imports     -->
-    <!-- Fonts: Inter, Poppins, Libre Baskerville -->
+    <!-- Fonts: Inter (for now at least) -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+
     <title>ZeroCloud</title>
     
   </head>
